--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,6 +5,7 @@
     <h1 class='transaction-title-text'>
       購入内容の確認
     </h1>
+    
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
       <%= image_tag @item.image, class: 'buy-item-img' %>
@@ -31,7 +32,8 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with model: @item_order, url: item_orders_path(@item),method: :post, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+      <%= render 'shared/error_messages', model: @item_order %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
