--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,18 +126,20 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% if @items.present? %>
         <% @items.each do |item| %>
         <li class='list'>
           <%= link_to item_path(item.id) do %>
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" if item.image.attached? %>
-            <%# 商品が売れていればsold outを表示しましょう %>
-            <%# <div class='sold-out'>
+            
+            <%# 売り切れの時の処理 %>
+            <% if Order.exists?(item_id: item.id) %>
+              <div class='sold-out'>
               <span>Sold Out!!</span>
-            </div> %>
-            <%# //商品が売れていればsold outを表示しましょう %>
+              </div>
+            <% end %>
+
           </div>
           <div class='item-info'>
             <h3 class='item-name'>
