--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,12 @@
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%# <div class='sold-out'>
+      <%# 商品が売れている場合 %>
+      <% if Order.exists?(item_id: @item.id) %>
+      　<div class='sold-out'>
         <span>Sold Out!!</span>
-      </div> %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      　</div>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -23,8 +24,8 @@
       </span>
     </div>
 
-    <% if user_signed_in? %>
-      <% if current_user.id == @item.user.id %>
+    <% if user_signed_in? && Order.where(item_id: @item.id).empty? %>
+      <% if current_user.id == @item.user.id   %>
         <%= link_to '商品の編集', "#", method: :get, class: "item-red-btn" %>
         <p class='or-text'>or</p>
         <%= link_to '削除', "#", method: :delete, class:'item-destroy' %>
